<resources>
    <string name="app_name">Instagram</string>
    <string name="all_application_name">Application Name</string>
    <string name="all_something_went_wrong">Something went wrong</string>


    <!--Login/Signup-->
    <string name="all_login">login</string>
    <string name="all_signup">Sign up</string>
    <string name="all_divider_text">OR</string>
    <string name="login_signupemail">Sign Up with Email</string>
    <string name="signup_loginemail">Login with Email</string>
    <string name="all_enteremail">Enter your email id</string>
    <string name="login_enterpassword">Enter your password</string>
    <string name="signup_enterpassword">Choose your password</string>
    <string name="signup_enterfullname">Choose your full name</string>
    <string name="all_validation_success">Validation Successful</string>
    <string name="all_empty_string" />
    <string name="all_invalid_email">Please enter valid email</string>
    <string name="all_invalid_password">Minimum password length is 6 characters</string>
    <string name="all_invalid_name">Please enter a valid name</string>
    <string name="all_empty_email">Email can\'t be empty</string>
    <string name="all_empty_password">Password can\'t be empty</string>
    <string name="all_empty_name">Name can\'t be empty</string>
    <string name="signup_success">Sign-Up successful. Login to proceed</string>

    <!--Network Errors-->
    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="server_unauthorized_user">Unauthorized User</string>
    <string name="network_login_again">Please log in again</string>

    <!--Main Screen-->
    <string name="main_home">Home</string>
    <string name="main_add_photos">Add Photos</string>
    <string name="main_profile">Profile</string>
    <string name="main_no_posts">No Posts</string>
    <string name="main_post_create_message">Create your post using plus button</string>
    <string name="main_my_posts_header">My Posts</string>

    <!--Main Screen (Profile)-->
    <string name="main_profile_post_count_default">0 Posts</string>
    <string name="main_profile_no_bio">No bio</string>
    <string name="main_profile_post_count_singular">%1$d post</string>
    <string name="main_profile_post_count_plural">%1$d posts</string>
    <string name="main_profile_like_count_singular">%1$d Like</string>
    <string name="main_profile_like_count_plural">%1$d Likes</string>

    <!--Main Screen (Edit Profile)-->
    <string name="main_editprofile_header">Edit Profile</string>
    <string name="main_editprofile_changephoto">Change Photo</string>
    <string name="main_editprofile_name">Name</string>
    <string name="main_editprofile_bio">Bio</string>
    <string name="main_editprofile_private_information">Private Information</string>
    <string name="main_editprofile_email_address">Email Address</string>

    <!--Main Screen (Add Photo)-->
    <string name="main_addphoto_gallery_header">Gallery</string>
    <string name="main_addphoto_filter_header">Filters</string>
    <string name="main_addphoto_filter_share">Share</string>
    <string name="main_addphoto_likedetails_likedby">Liked By</string>
    <string name="main_addphoto_camera">Camera</string>
    <string name="main_addphoto_loadingcomplete">Finished loading all images</string>
    <string name="main_addphoto_image_confirmation">Proceed with selection?</string>
    <string name="main_addphoto_post_created">Post created</string>
</resources>
